// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FaceLabeling /> should render properly 1`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Select an asset to start adding names to faces and train your model.
  </div>,
]
`;

exports[`<FaceLabeling /> should render selected asset with no data 1`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    No faces have been detected in this asset for naming and training. Please select another asset.
  </div>,
]
`;

exports[`<FaceLabeling /> should render selected asset with predictions 1`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #0074f5;
}

<div
    className="emotion-0"
  >
    AssetFilename.jpg
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 0;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  padding: 16px;
  background-color: #191919;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-3 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-4 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited,
.emotion-5 .noop {
  background-color: #808080;
}

.emotion-5:hover,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #73b61c;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-3"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <Combobox
          hasError={false}
          label="Name"
          onChange={[Function]}
          options={Array []}
          value="face1"
        />
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <button
        aria-disabled={true}
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        aria-disabled={true}
        className="emotion-7"
        onClick={[Function]}
        type="submit"
      >
        Saved
      </button>
    </div>
  </form>,
]
`;

exports[`<FaceLabeling /> should render selected asset with predictions 2`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #0074f5;
}

<div
    className="emotion-0"
  >
    AssetFilename.jpg
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 0;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  padding: 16px;
  background-color: #191919;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-3 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-4 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited,
.emotion-5 .noop {
  background-color: #808080;
}

.emotion-5:hover,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #73b61c;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-3"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <Combobox
          hasError={false}
          label="Name"
          onChange={[Function]}
          options={Array []}
          value="Jane"
        />
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <button
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        className="emotion-7"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>,
]
`;

exports[`<FaceLabeling /> should render selected asset with predictions 3`] = `
Array [
  <FaceLabelingTrainApply
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
  />,
  .emotion-0 {
  padding: 16px;
  color: #0074f5;
}

<div
    className="emotion-0"
  >
    AssetFilename.jpg
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 24px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-2 a {
  color: #ffffff;
  background-color: #3b3b3b;
  padding: 6px;
  margin-left: 8px;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 2px;
}

.emotion-2 a:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #2e2e2e;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-2"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>,
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  padding: 0;
  width: 100%;
  overflow: hidden;
}

.emotion-1 {
  padding: 16px;
  background-color: #191919;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: auto;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 16px;
}

.emotion-3 {
  max-height: 64px;
  width: 64px;
  object-fit: contain;
  margin-right: 16px;
}

.emotion-4 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-5,
.emotion-5:hover,
.emotion-5:visited,
.emotion-5 .noop {
  background-color: #808080;
}

.emotion-5:hover,
.emotion-5 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-5[aria-disabled=true],
.emotion-5 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-6 {
  width: 8px;
  min-width: 8px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-7,
.emotion-7:hover,
.emotion-7:visited,
.emotion-7 .noop {
  background-color: #73b61c;
}

.emotion-7:hover,
.emotion-7 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-7[aria-disabled=true],
.emotion-7 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<form
    action=""
    className="emotion-0"
    method="post"
    onSubmit={[Function]}
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <img
          alt={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
          className="emotion-3"
          title={
            Array [
              0.38,
              0.368,
              0.484,
              0.584,
            ]
          }
        />
        <Combobox
          hasError={false}
          label="Name"
          onChange={[Function]}
          options={Array []}
          value="Jane"
        />
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <button
        className="emotion-5"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-6"
      />
      <button
        className="emotion-7"
        onClick={[Function]}
        type="submit"
      >
        Save
      </button>
    </div>
  </form>,
]
`;
